Added new content

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "autocomplete-react-component": "0.0.16",
     "booklet-react-component": "0.0.10",
     "bootstrap": "^3.3.7",
     "font-awesome": "^4.7.0",
