--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router-bootstrap": "^0.24.2",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.11",
+    "react-waypoint": "^7.1.0",
     "typed-react-component": "0.0.4"
   },
   "scripts": {
