--- a/package.json
+++ b/package.json
@@ -1,25 +1,27 @@
 {
-  "name": "brettreinhard.com",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "autocomplete-react-component": "0.0.16",
-    "booklet-react-component": "0.0.10",
-    "bootstrap": "^3.3.7",
-    "font-awesome": "^4.7.0",
-    "react": "^15.6.1",
-    "react-bootstrap": "^0.31.2",
-    "react-dom": "^15.6.1",
-    "react-router-bootstrap": "^0.24.2",
-    "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.11",
-    "react-waypoint": "^7.1.0",
-    "typed-react-component": "0.0.4"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  }
+    "name": "brettreinhard.com",
+    "version": "0.1.0",
+    "private": true,
+    "homepage": "http://brettreinhard.com/brettreinhard.com",
+    "dependencies": {
+        "autocomplete-react-component": "0.0.16",
+        "booklet-react-component": "0.0.10",
+        "bootstrap": "^3.3.7",
+        "font-awesome": "^4.7.0",
+        "react": "^15.6.1",
+        "react-bootstrap": "^0.31.2",
+        "react-dom": "^15.6.1",
+        "react-router-bootstrap": "^0.24.2",
+        "react-router-dom": "^4.2.2",
+        "react-scripts": "1.0.11",
+        "react-waypoint": "^7.1.0",
+        "typed-react-component": "0.0.4"
+    },
+    "scripts": {
+        "deploy": "npm run build&&gh-pages -d build",
+        "start": "react-scripts start",
+        "build": "react-scripts build",
+        "test": "react-scripts test --env=jsdom",
+        "eject": "react-scripts eject"
+    }
 }
