--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "bootstrap": "^3.3.7",
         "font-awesome": "^4.7.0",
         "react": "^15.6.1",
+        "react-addons-css-transition-group": "^15.6.0",
         "react-bootstrap": "^0.31.2",
         "react-dom": "^15.6.1",
         "react-router-bootstrap": "^0.24.2",
@@ -18,10 +19,14 @@
         "typed-react-component": "0.0.4"
     },
     "scripts": {
-        "deploy": "npm run build&&gh-pages -d build",
+        "deploy":
+            "npm run build&&gh-pages -d build&&git add *&&git commit -m \"Added new features\"&&git push&&git checkout gh-pages&&sudo rm -R ../bareinhard.github.io/* &&cp -R * ../bareinhard.github.io/ && cd ../bareinhard.github.io &&git add * && git commit -m \"Update WebPage\"&&git push&&cd ../brett.reinhard.com&&git checkout master",
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test --env=jsdom",
         "eject": "react-scripts eject"
+    },
+    "devDependencies": {
+        "gh-pages": "^1.0.0"
     }
 }
