--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     },
     "scripts": {
         "deploy":
-            "sudo npm run build&&gh-pages -d build&&sudo git checkout gh-pages&&sudo rm -R ../bareinhard.github.io/* &&sudo cp -R * ../bareinhard.github.io/ &&sudo cd ../bareinhard.github.io &&sudo git add * &&sudo git commit -m \"Update WebPage\"&&git push&&sudo cd ../brett.reinhard.com&&sudo git checkout master",
+            "sudo npm run build&&gh-pages -d build&&sudo git checkout gh-pages&&sudo git pull&&sudo rm -R ../bareinhard.github.io/* &&sudo cp -R * ../bareinhard.github.io/ &&sudo cd ../bareinhard.github.io &&sudo git add * &&sudo git commit -m \"Update WebPage\"&&git push&&sudo cd ../brett.reinhard.com&&sudo git checkout master",
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test --env=jsdom",
